# mdto.py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: codecov.yml  pytest.yml
mdto/: __init__.py  classes.py  gegevensgroepen.py  helpers.py  utilities.py
mdto/data/: rwc_gemeenten_compleet_4.json  rwc_provincies_compleet_1.json  rwc_waterschappen_compleet_2.json
tests/: README.md  conftest.py  test_checksum_verification.py  test_cleaning.py  test_custom_parser_tolerance.py  test_custom_validate.py  test_fileformat_detection.py  test_mdto_voorbeelden.py  test_mdto_xsd.py  test_pronom_detection.py  test_tooi_extraction.py
