[project]
name = "mdto"
version = "0.0.1"
authors = [
  { name="Rijnder Wever", email="rwever@rarivierland.nl"},
  { name="Wilmar van Ommeren", email="w.van.ommeren@zeeuwsarchief.nl"},
]
license = { file = "LICENSE"}
description = "Library voor het aanmaken, aanpassen, en controleren van MDTO XML bestanden"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["MDTO", "archiving", "Goverment data"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

dependencies = [
    "validators",
    "pygfried",
    "lxml",
]

[project.urls]
Homepage = "https://github.com/Regionaal-Archief-Rivierenland/mdto.py"
Issues = "https://github.com/Regionaal-Archief-Rivierenland/mdto.py/issues"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mdto"]

[tool.setuptools.package-data]
"mdto" = ["data/*.json"]